--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,16 @@
-# This is a basic workflow to help you get started with Actions
+on: [push, pull_request, workflow_dispatch]
 
 name: Build
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    container:
+      image: zmkfirmware/zmk-build-arm:2.5
+    name: Build
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
-        uses: actions/checkout@v1
-      
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        uses: actions/checkout@v2
       - name: Cache west modules
         uses: actions/cache@v2
         env:
@@ -51,39 +33,29 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (Corne-ish Zen Left)
-        run: >-
-          west build
-          -s zmk/app
-          -b corne-ish_zen_left
-          --
-          -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Corne-ish Zen DTS File
+      - name: West Build (lily58 Left)
+        run: west build -s zmk/app -b lily58 -- -DSHIELD=lily58_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Lily58-Glow-Enc-Wireless DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/corne-ish_zen_left.dts.pre.tmp
-      - name: Corne-ish Zen Left Kconfig file
+        run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
+      - name: Lily58-Glow-Enc-Wireless Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corneish_zen_left.uf2
-      - name: Archive (Corne-ish Zen Left)
+        run: cp build/zephyr/zmk.uf2 lily58_left_nice_nano_v2.uf2
+      - name: Archive (Lily58-Glow-Enc-Wireless Left)
         uses: actions/upload-artifact@v2
         with:
-          name: corneish_zen_firmware-${{ steps.date.outputs.date }}
-          path: corneish_zen_left.uf2
-      - name: West Build (Corne-ish Zen Right)
-        run: >-
-          west build
-          --pristine
-          -s zmk/app
-          -b corne-ish_zen_right
-          --
-          -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Corne-ish Zen Right Kconfig file
+          name: firmware
+          path: lily58_left_nice_nano_v2.uf2
+      - name: West Build (Lily58-Glow-Enc-Wireless Right)
+        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+
+      - name: Lily58-Glow-Enc-Wireless Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corneish_zen_right.uf2
-      - name: Archive (Corne-ish Zen Right)
+        run: cp build/zephyr/zmk.uf2 lily58_right_nice_nano_v2.uf2
+      - name: Archive (Lily58-Glow-Enc-Wireless Right)
         uses: actions/upload-artifact@v2
         with:
-          name: corneish_zen_firmware-${{ steps.date.outputs.date }}
-          path: corneish_zen_right.uf2
+          name: firmware
+          path: lily58_right_nice_nano_v2.uf2
